# simulated_omni_drive_skill

./: .travis.yml  down.rosinstall  simulated_omni_drive_skill.yaml  up.rosinstall
.ci_scripts/: aws_init.sh  aws_simulation.sh  before_script.sh  init_script.sh
simulated_omni_drive_skill_client/: CMakeLists.txt  package.xml  setup.py
simulated_omni_drive_skill_client/src/simulated_omni_drive_skill_client/: simulated_omni_drive_skill_client.py
simulated_omni_drive_skill_msgs/: CMakeLists.txt  package.xml
simulated_omni_drive_skill_msgs/action/: SimulatedOmniDriveSkill.action
simulated_omni_drive_skill_scxml/: simulated_omni_drive_skill.scxml
simulated_omni_drive_skill_server/: CMakeLists.txt  package.xml  setup.py
simulated_omni_drive_skill_server/launch/: run.launch  run_sim_test.launch
simulated_omni_drive_skill_server/resources/: test_skill.scxml
simulated_omni_drive_skill_server/scripts/: simulated_omni_drive_skill.py
simulated_omni_drive_skill_server/src/: simulated_omni_drive_skill.py
simulated_omni_drive_skill_server/src/simulated_omni_drive_skill_class/: simulated_omni_drive_skill_class.py
simulated_omni_drive_skill_server/src/simulated_omni_drive_skill_server/: simulated_omni_drive_skill_class.py
simulated_omni_drive_skill_server/test/: integration_test.test  simulated_omni_drive_skill_server_integration_tests.py  test_simulated_omni_drive_skill_class.py  unit_test.test
